@@ -59,6 +59,8 @@ libcli_a_SOURCES += cli/main.cpp
 libcli_a_SOURCES += cli/main.hpp
 libcli_a_SOURCES += cli/report_console.cpp
 libcli_a_SOURCES += cli/report_console.hpp
+libcli_a_SOURCES += cli/report_junit.cpp
+libcli_a_SOURCES += cli/report_junit.hpp
 libcli_a_CPPFLAGS  = -DKYUA_CONFDIR="\"$(kyua_confdir)\""
 libcli_a_CPPFLAGS += -DKYUA_DOCDIR="\"$(docdir)\""
 libcli_a_CPPFLAGS += -DKYUA_MISCDIR="\"$(miscdir)\""
