@@ -25,7 +25,7 @@
 .\" THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 .\" OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.Dd February 25, 2014
+.Dd May 13, 2014
 .Dt KYUA-REPORT 1
 .Os
 .Sh NAME
@@ -93,6 +93,8 @@ command can generate reports in the following formats:
 .It console
 A user-friendly, plain-text report designed to be consumed by the user from the
 terminal.  Not intended to be machine-parseable.
+.It junit
+An XML report using the JUnit schema.  Proven to work with Jenkins.
 .El
 .Sh EXIT STATUS
 The
